syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "google/protobuf/wrappers.proto";

import "Identity.proto";
import "Mandants.proto";
import "GrpcAddress.proto";
import "Messages/NaturalPerson.proto";
import "Messages/IdentificationDocument.proto";
import "Messages/Contacts.proto";

message SearchCustomersRequest {
    cis.types.Identity Identity = 1;
    cis.types.Mandants Mandant = 2;
    NaturalPersonSearch NaturalPerson = 3;
    IdentificationDocumentSearch IdentificationDocument = 4;
    EmailAddressItem Email = 5;
    MobilePhoneItem MobilePhone = 6;
    google.protobuf.BoolValue SearchOnlyIdentified = 7;
}

message SearchCustomersResponse {
    repeated SearchCustomersItem Customers = 1;
}

message SearchCustomersItem {
    cis.types.Identity Identity = 1;
    NaturalPersonBasicInfo NaturalPerson = 2;
    IdentificationDocument IdentificationDocument = 3;
    cis.types.GrpcAddress Address = 4;
}